--- a/app/partials/app-title.html
+++ b/app/partials/app-title.html
@@ -1,10 +1,7 @@
 <div class="app-title-pan row">
-	<div class="col-xs-6">
-		<img class="title-logo title-animation" src="/public/img/logo.png"></img>
-	</div>
-	<div class="col-xs-6">
-		<span class="app-title title-animation">NightLife</span>
+	<div class="col-xs-6 col-xs-offset-3">
+		<span class="app-title title-animation">Books-Exchange-Club <span class="glyphicon glyphicon-pencil"></span></span>
 		<br>
-		<span class="app-subtitle title-animation">coordination</span>
+		<span class="app-subtitle title-animation">books lovers united</span>
 	</div>
 </div>
