--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,6 @@
 body {
-  color: #aaa;
-  background: #091019;
-  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAGCAYAAADgzO9IAAAARElEQVQIW2MUVtD7/+3DawYuAVEGEP39w3MGTgFJBkZOAcn/6IIgPiNMB0wlTBFYB7ogWAcDA8N/kJkwlSg60AVBJgAAitk0WTAQd3YAAAAASUVORK5CYII=) repeat;
+  color: #875713;
+  background: #EBDFCE;
 }
 
 html {
@@ -18,40 +17,9 @@ html {
   height:70px;
 }
 
-.title-animation {
-  opacity: 0;
-  animation: shift-fadein ease 6s;
-  animation-iteration-count: 1;
-  transform-origin: 50% 50%;
-  animation-fill-mode: forwards;
-  /*when the spec is finished*/
-  -webkit-animation: shift-fadein ease 6s;
-  -webkit-animation-iteration-count: 1;
-  -webkit-transform-origin: 50% 50%;
-  -webkit-animation-fill-mode: forwards;
-  /*Chrome 16+, Safari 4+*/
-  -moz-animation: shift-fadein ease 6s;
-  -moz-animation-iteration-count: 1;
-  -moz-transform-origin: 50% 50%;
-  -moz-animation-fill-mode: forwards;
-  /*FF 5+*/
-  -o-animation: shift-fadein ease 6s;
-  -o-animation-iteration-count: 1;
-  -o-transform-origin: 50% 50%;
-  -o-animation-fill-mode: forwards;
-  /*Not implemented yet*/
-  -ms-animation: shift-fadein ease 6s;
-  -ms-animation-iteration-count: 1;
-  -ms-transform-origin: 50% 50%;
-  -ms-animation-fill-mode: forwards;
-  /*IE 10+*/
-}
-
 .app-title {
   font-size: 50px;
   line-height: 50px;
-  -webkit-animation-delay: 2s;
-  animation-delay: 2s;
 }
 
 .app-subtitle {
@@ -59,85 +27,145 @@ html {
   margin-top: 5px;
   font-size: 14px;
   line-height: 14px;
-  -webkit-animation-delay: 4s;
-  animation-delay: 4s;
 }
 
 .app-title-pan {
-  font-family: 'Kaushan Script', cursive;
   margin:0;
+  font-family: 'Overlock', cursive;
   margin-bottom: 20px;
-  padding: 70px;
-  background: #000;
-  border-bottom: 1px solid #394049;
-  border-top: 1px solid #394049;
-  color: #A6CAFE;
+  padding: 20px;
+  background: #130904;
+  color: #EBDFCE;
   text-align: left;
-  -webkit-text-shadow: 0px 0px 15px rgba(166, 202, 254, 0.32);
-  -moz-text-shadow: 0px 0px 15px rgba(166, 202, 254, 0.32);
-  text-shadow: 0px 0px 15px rgba(166, 202, 254, 0.32);
 }
 
-.form-control{
-  background-color:#000910;
-  border-color:#798089;
-  color:#a9b0b9;
-  
+.book button{
+  opacity:0;
 }
 
-.places-container{
-  margin:10px;
-  max-height: 1590px;
+
+.book:hover button{
+  opacity:1;
+}
+
+.book{
+  position: relative;
+  display:inline-block;
+  vertical-align:top;
+  background:#eee;
+  margin:4px;
+}
+.book-pic{
+   border-radius:6px;
+}
+
+.finded-contaider {
+  margin-top:12px;
+  position: relative;
+}
+
+.finded-tip-container {
+  position: absolute;
+  bottom: 38px;
+  width:490px;
+}
+
+.finded-tip:hover {
+  border: 1px solid #998;
+  transform:scale(2.0);
+  transition:0.1s;
+}
+
+.finded-pic{
+  float:left;
+  margin-right:5px;
+  display:block;
+  height:50px;
+  width:auto;
+  border-radius:3px;
+}
+
+
+
+.finded-tip {
+  width:230px;
+  height:60px;
   overflow:hidden;
-  transition:1s;
-}
-.places-container-collapse{
-  max-height: 0;
-  transition:1s;
-}
-
-.place{
-  border-top:1px solid #293039;
-  margin:3px;
-  padding:6px;
-  background-color:#091019;
-  border-radius:7px;
+  float:left;
+  border-radius: 5px;
+  font-size: 0.9em;
+  padding: 4px 10px;
+  background: #ffe;
+  border: 1px solid #ccb;
+  color: #998;
+  cursor: pointer;
 }
 
-.place-title{
-  font-size:1.6em;
+.finded-tip-code {
+  font-size: 1.0em;
+  color: #776;
 }
 
-.place-pic{
- border-radius:5px; 
-}
-.place-adr{
-  font-size:0.9em;
-  color:#456;
+.books-tab{
+  
+  width:100%;
+  background:#fff;
+  padding:20px;
+  border-radius:10px;
 }
 
-.btn-going{
+.btn-book{
+  white-space:normal;
+  word-wrap: break-word;
   position:absolute;
   right:25px;
   bottom:10px;
+  text-align:center;
+}
+
+.book-alert{
+  position:absolute;
+  left:0;
+  top:0;
+}
+
+.book-notify{
+  display:none;
+  background-color:#253;  
+  color:#697;  
+  width:100px;
+  text-align:center;
+  margin-bottom:4px;
+  padding:4px;
+  border-radius:6px;
+}
+
+.book:hover .book-notify{
+  display:block;
 }
 
 
+.nav-tabs {
+  padding-left:20px;
+}
 
 .div-inline {
   display: inline-block;
   margin: 30px;
 }
 
+.no-yet-message{
+  color:#ddd;
+  font-size:3em;
+  padding:50px;
+}
+
+
 .footer {
   height: 70px;
   width: 100%;
-  border-top: 1px solid #394049;
   background: #192029;
-}
-
-.title-logo {
-  float: right;
+  color: #9B8F7E;
 }
 
 .flext-center-center {
@@ -155,57 +183,3 @@ html {
   align-items: center;
 }
 
-@keyframes shift-fadein {
-  0% {
-    opacity: 0;
-    transform: translate(46px, 0px);
-  }
-  100% {
-    opacity: 1;
-    transform: translate(0px, 0px);
-  }
-}
-
-@-moz-keyframes shift-fadein {
-  0% {
-    opacity: 0;
-    -moz-transform: translate(46px, 0px);
-  }
-  100% {
-    opacity: 1;
-    -moz-transform: translate(0px, 0px);
-  }
-}
-
-@-webkit-keyframes shift-fadein {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate(46px, 0px);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translate(0px, 0px);
-  }
-}
-
-@-o-keyframes shift-fadein {
-  0% {
-    opacity: 0;
-    -o-transform: translate(46px, 0px);
-  }
-  100% {
-    opacity: 1;
-    -o-transform: translate(0px, 0px);
-  }
-}
-
-@-ms-keyframes shift-fadein {
-  0% {
-    opacity: 0;
-    -ms-transform: translate(46px, 0px);
-  }
-  100% {
-    opacity: 1;
-    -ms-transform: translate(0px, 0px);
-  }
-}
